# multiprocessing-NN

./: .gitignore  LICENSE  README.md  main.py
cuda/: CMakeLists.txt  main.cu
cuda/code_config/: launch.json  settings.json  tasks.json
cuda/include/: data_loading.h  device_info.h
cuda/ncu/: ncu.sh  output.log.ncu-rep
cuda/notes/: Cuda.md  Kernel.md  MLP.md  Memory.md  notes.ipynb
cuda/src/: data_loading.cu  device_info.cu
cuda/tests/: LA.ipynb  classification.ipynb  main.py  regression.ipynb  test.cu  torchTruth.py
pthreads/: CMakeLists.txt  main.cpp  main.ipynb
pthreads/NOtes/: accomulator  accomulators  accomulators.cpp  accomulators2.cpp  accomulators3.cpp  accomulators4.cpp  accoumulators  accounlators  double.cpp  fffff  update  update.cpp
pthreads/datasets/: california.csv
pthreads/include/: .txt  activation_functions.h  dataset.h  mlp.h  neural_network.h  threads.h  threads_accomulatorsWB.h  threads_train.h
pthreads/src/: activation_functions.cpp  data_loading.cpp  dataset.cpp  mlp.cpp  neural_network.cpp  pthread_example  pthread_example.cpp  threads.cpp  threads_accomulatorsWB.cpp  threads_train.cpp
serial/: CMakeLists.txt  generateDataset.py  main.c  main.cpp
serial/datasets/: california1.csv
